--- a/toby-springboot-autoconfig/doc/10. 스프링부트 자세히보기.md
+++ b/toby-springboot-autoconfig/doc/10. 스프링부트 자세히보기.md
@@ -1,12 +1,12 @@
 # 10 스프링 부트 자세히 보기
 
-![스프링부트-자동설정동작방식.png](스프링부트-자동설정동작방식.png)
+![스프링부트-자동설정동작방식.png](img/스프링부트-자동설정동작방식.png)
 
 스프링 부트의 동작방식을 이해하고 자신이 사용하는 기술 관련 자동구성과 프로퍼티 등을 분석하고 어떻게 활용할 수 있는지 파악하는 것이 필요하다.
 
 ### 자동구성 분석방법
 
-![자동구성 분석방법.png](자동구성 분석방법.png)
+![자동구성-분석방법.png](img/자동구성-분석방법.png)
 
 1. -Ddebug VM 옵션 추가
 
