refact: 1) toby-springboot-autoconfig    - md파일 경로 변경

--- a/toby-springboot/3. 독립 실행형 서블릿 어플리케이션.md
+++ b/toby-springboot/3. 독립 실행형 서블릿 어플리케이션.md
@@ -50,7 +50,7 @@ public interface ServletContextInitializer {
 
 ◼︎ 프론트 컨트롤러
 
-![프론트컨트롤러.png](img/프론트컨트롤러.png)
+![프론트컨트롤러.png](doc/img/프론트컨트롤러.png)
 
 여러 요청을 처리하는데 반복적으로 등장하게 되는 공통 작업을 하나의 오브젝트에서 일괄적으로 처리하게 만드는 방식을 프론트 컨트롤러 패턴 이라고 한다.
 
