--- a/toby-springboot/5. DI와 테스트, 어노테이션 활용.md
+++ b/toby-springboot/5. DI와 테스트, 어노테이션 활용.md
@@ -101,9 +101,9 @@ public class HelloServiceTest {
 - Decorator Pattern
   기존 코드에 동적으로 책임을 추가할 때 쓰는 패턴
 
-![Decorator1.png](img/Decorator1.png)
+![Decorator1.png](doc/img/Decorator1.png)
 
-![Decorator2.png](img/Decorator2.png)
+![Decorator2.png](doc/img/Decorator2.png)
 
 데코레이터는 자기가 구현하는 인터페이스 타입의 다른 오브젝트를 의존한다.
 
@@ -132,8 +132,8 @@ public class HelloDecorator implements HelloService {
 ◼︎ Proxy Pattern
 프록시 패턴에서 프록시는 다른 오브젝트의 대리자 혹은 플레이스 홀더 역할을 한다.
 
-![Proxy1.png](img/Proxy1.png)
+![Proxy1.png](doc/img/Proxy1.png)
 
-![Proxy2.png](img/Proxy2.png)
+![Proxy2.png](doc/img/Proxy2.png)
 
 프록시 패턴의 프록시와 일반적인 용어 프록시, 자바의 다이나믹 프록시가 동일한 건 아니다.
