--- a/toby-springboot/8. 외부설정을 활용하는 자동구성.md
+++ b/toby-springboot/8. 외부설정을 활용하는 자동구성.md
@@ -4,11 +4,11 @@
 
 Environment Properties 외부 설정 값에 따라 Bean 등록 정보를 구성할 수 있다.
 
-![스프링부트 자동구성 흐름도.png](img/스프링부트%20자동구성%20흐름도.png)
+![스프링부트 자동구성 흐름도.png](doc/img/스프링부트%20자동구성%20흐름도.png)
 
 ## 스프링의 Environment 추상화
 
-![스프링부트 Environment 추상화.png](img/스프링부트%20Environment%20추상화.png)
+![스프링부트 Environment 추상화.png](doc/img/스프링부트%20Environment%20추상화.png)
 
 - 기억해야 하는 간략한 우선순위
 
