refact: 1) png파일 경로 이동

--- a/toby-springboot/1. 스프링 부트 살펴보기.md
+++ b/toby-springboot/1. 스프링 부트 살펴보기.md
@@ -14,7 +14,7 @@
 
 ◼︎ 컨테이너리스 개발
 
-![컨테이너리스.png](doc/img/컨테이너리스.png)
+![컨테이너리스.png](img/컨테이너리스.png)
 
 스프링 어플리케이션 개발에 요구되는 서블릿 컨테이너 설치, war 폴더 구조, web.xml 등과 같은 어플리케이션 개발의 핵심이 아닌 단순 반복 작업을 제거해주는 개발도구와
 아키텍쳐를 지원   
