--- a/toby-springboot/7. 조건부 자동 구성.md
+++ b/toby-springboot/7. 조건부 자동 구성.md
@@ -29,7 +29,7 @@ public interface Condition {
 @Conditional은 @Configuration 클래스와 @Bean 메서드에 적용 가능하다.   
 클래스 조건을 만족하지 못하면 @Bean 메서드는 무시된다.
 
-![Conditional-Condition.png](doc/img/Conditional-Condition.png)
+![Conditional-Condition.png](img/Conditional-Condition.png)
 
 ◼︎ @Conditional 테스트 코드 작성
 
@@ -125,7 +125,7 @@ public class MyConditionOnClass implements Condition {
 
 ◼︎ 커스텀 @Conditional 동작 방식
 
-![CustomConditional 동작방식.png](doc/img/CustomConditional%20동작방식.png)
+![CustomConditional 동작방식.png](img/img/CustomConditional%20동작방식.png)
 
 ◼︎ 자동구성 정보 대체하기
 자동 구성 정보는 다음의 과정으로 구성정보가 등록된다.
@@ -173,7 +173,7 @@ public class WebServerConfiguration {
 
 ◼︎ 사용자구성정보 vs 자동구성정보 빈 등록 우선순위
 
-![img_2.png](doc/img/사용자구성정보vs자동구성정보%20빈%20등록%20우선순위.png)
+![img_2.png](img/img/사용자구성정보vs자동구성정보%20빈%20등록%20우선순위.png)
 
 ◼︎ 스프링 부트의 @Conditional
 
