--- a/toby-springboot/6. 자동구성 기반 애플리케이션.md
+++ b/toby-springboot/6. 자동구성 기반 애플리케이션.md
@@ -55,12 +55,12 @@ public @interface RestController {
   개발자가 작성한 구성 정보에 의해서 생성되는게 아니라 컨테이너가 직접 만들고 사용하는 빈이기 때문에 어플리케이션 빈과 구분한다.   
   필요한 경우 일부 컨테이너 인프라 빈은 주입 받아서 활용할 수 있다.
 
-![빈 오브젝트 구분.png](doc/img/빈%20오브젝트%20구분.png)
+![빈 오브젝트 구분.png](img/img/빈%20오브젝트%20구분.png)
 
 스프링 부트의 빈 구성정보는 컴포넌트 스캔에 의해서 등록되는 빈과 자동구성에 의해서 등록 되는 빈으로 구분된다.   
 일반적으로 어플리케이션 인프라 빈은 자동 구성에 의해 등록되지만 개발자가 작성한 코드 구성정보에서도 등록될 수 있다.
 
-![사용자구성정보vs자동구성정보.png](doc/img/사용자구성정보vs자동구성정보.png)
+![사용자구성정보vs자동구성정보.png](img/사용자구성정보vs자동구성정보.png)
 
 ◼︎ 인프라 빈 구성 정보의 분리
 @Import 를 이용하면 스캔 대상이 아닌 클래스를 빈으로 등록하도록 추가할 수 있다.
@@ -285,6 +285,6 @@ public class ConfigurationTest {
 
 ◼︎ 자동 구성 구조
 
-![자동구성구조.png](doc/img/자동구성구조.png)
+![자동구성구조.png](img/자동구성구조.png)
 
 
