feat: 1) 멱등성 프로듀서, 트랜잭션 프로듀서와 컨슈머.md 파일 작성

--- a/kafka/7. 멱등성 프로듀서, 트랜잭션 프로듀서와 컨슈머.md
+++ b/kafka/7. 멱등성 프로듀서, 트랜잭션 프로듀서와 컨슈머.md
@@ -63,6 +63,13 @@
 - 자주 발생하는 케이스는 아님
 
 ***
+### Kafka Exactly Once Semantics
+
+- 멱등성 프로듀서 방식 이 외에도 Kafka 에서는 정확히 한 번(Exactly Once) 전송을 보장하는 다른 방법이 있음
+- 컨슈머 어플리케이션 단에서 메세지의 Key를 DB에 저장 해서 N건 저장을 방지
+  - 메세지 값에 Key를 정의하는 규약 필요
+
+***
 ### 트랜잭션 프로듀서의 동작
 
 ![트랜잭션 프로듀서.png](img/section7/트랜잭션%20프로듀서.png)
