feat: 1) 카프카 커넥트.md 파일 작성 2) 카프카 소스 커넥터.md 파일 작성 3) 카프카 싱크 커넥터.md 파일 작성

--- a/kafka/9. 카프카 커넥트.md
+++ b/kafka/9. 카프카 커넥트.md
@@ -88,12 +88,12 @@
 
     ```properties
     bootstrap.servers=my-kafka:9092                                     # kafka 클러스터 호스트:포트
-    key.converter=org.apache.kafka.connect.json.JsonConverter           # converter 설정 
+    key.converter=org.apache.kafka.connect.json.JsonConverter           # converter 설정
     value.converter=org.apache.kafka.connect.json.JsonConverter         # converter 설정
     key.converter.schemas.enable=false                                  # converter 사용여부
     value.converter.schemas.enable=false                                # converter 사용여부
     offset.storage.file.filename=/tmp/connect.offsets                   # offset 인덱스 정보 저장 파일 로컬 서버 경로
-    offset.flush.interval.ms=10000                                      # 태스크 처리에 따른 offset 커밋 주기
+    offset.flush.interval.ms=10000                                      # 태스크가 처리 완료한 오프셋을 커밋하는 주기
     plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins    # 플러그인 커넥터의 jar파일이 위치하는 디렉토리 경로
     ```
 
@@ -112,4 +112,51 @@
     ```
   
 ***
-### 
+### 분산 모드 커넥트
+
+![분산 모드 커넥트-2.png](img/section9/분산%20모드%20커넥트-2.png)
+
+- 분산 모드는 2개 이상의 프로세스가 1개의 그룹으로 묶여서 운영된다.
+- 따라서 1개의 프로세스에 이슈가 발생하더라도 나머지 1개 프로세스에서 처리 가능하다.
+- connect-distributed.properties
+  ```properties
+  bootstrap.servers=my-kafka:9092                                     # kafka 클러스터 호스트:포트
+  group.id=connect-cluster                                            # 분산 모드 group.id
+  key.converter=org.apache.kafka.connect.json.JsonConverter           # converter 설정
+  value.converter=org.apache.kafka.connect.json.JsonConverter         # converter 설정
+  key.converter.schemas.enable=false                                  # converter 사용여부
+  value.converter.schemas.enable=false                                # converter 사용여부
+  
+  offset.storage.topic=connect-offsets                                # 오프셋 정보 저장하는 카프카 토픽
+  offset.storage.replication.factor=1                                 # 오프카 정보 저장하는 카프카 토픽 복제 개수 (운영 환경 에서는 3 이상이 좋음)
+  config.storage.topic=connect-configs                                # 커넥터 설정 정보 저장하는 카프카 토픽
+  config.storage.replication.factor=1                                 # 커넥터 설정 정보 저장하는 카프카 토픽 복제 개수 (3 추천)
+  status.storage.topic=connect-status                                 # 커넥터 상태 정보 저장하는 카프카 토픽
+  status.storage.replication.factor=1                                 # 커넥터 상태 정보 저장하는 카프카 토픽 복제 개수 (3 추천)
+  
+  offset.flush.interval.ms=10000                                      # 태스크가 처리 완료한 오프셋을 커밋하는 주기
+  plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins    # 플러그인 커넥터의 jar파일이 위치하는 디렉토리 경로
+  ```
+  
+***
+### 커스텀 소스 커넥터
+
+![커스텀 소스 커넥터.png](img/section9/커스텀%20소스%20커넥터.png)
+
+- 소스 커넥터는 소스 어플리케이션 또는 소스 파일로부터 데이터를 가져와 토픽에 저장하는 역할
+- 직접 커스텀 소스 커넥터를 개발하려면 카프카 커넥트 라이브러리에서 제공하는 SourceConnetor 와 SourceTask 를 사용해서 직접 구현 가능하다.
+- 직접 구현한 소스 커넥터를 빌드하여 jar 파일로 만들고 커넥트 실행 시 플러그인으로 추가 해서 사용할 수 있다.
+
+***
+### SourceConnector
+
+- 태스크를 실행하기 전 커넥터 설정파일을 초기화
+- 어떤 클래스를 사용할 것인지 정의
+- 실질적인 데이터 처리는 하지 않음
+
+***
+### SourceTask
+
+- 소스 어플리케이션 또는 소스 파일로부터 데이터를 가져와서 토픽으로 저장하는 역할
+- 토픽에서 사용하는 오프셋이 아닌 자체 오프셋 사용
+- 실질적인 데이터 처리 담당
