feat: 1) 카프카 커넥트.md 파일 작성

--- a/kafka/9. 카프카 커넥트.md
+++ b/kafka/9. 카프카 커넥트.md
@@ -160,3 +160,10 @@
 - 소스 어플리케이션 또는 소스 파일로부터 데이터를 가져와서 토픽으로 저장하는 역할
 - 토픽에서 사용하는 오프셋이 아닌 자체 오프셋 사용
 - 실질적인 데이터 처리 담당
+
+***
+### 카프카 커넥트를 운영하기 위한 웹 페이지
+
+- REST-API 인터페이스를 지속적이고 편리하게 운영하기 위한 오픈소스 웹페이지
+- [kakao 오픈소스 웹페이지](https://github.com/kakao/kafka-connect-web)
+
