Update 2. 카프카의 기본 개념.md

--- a/kafka/2. 카프카의 기본 개념.md
+++ b/kafka/2. 카프카의 기본 개념.md
@@ -23,7 +23,7 @@
 ***
 ### 주키퍼(1) : 카프카 클러스터(1)
 
-![주키퍼1-카프카클러스터1.png](img/section2/주키퍼1-카프카클러스터1.png)
+![주키퍼1-카프카클러스터1.png](img/section2/주키퍼1-카프카클러스터1.png)
 
 ***
 ### 주키퍼(N) : 카프카 클러스터(N)
