Update 3. 독립 실행형 서블릿 어플리케이션.md

--- a/toby-springboot/3. 독립 실행형 서블릿 어플리케이션.md
+++ b/toby-springboot/3. 독립 실행형 서블릿 어플리케이션.md
@@ -7,7 +7,7 @@
 내장형 톰캣의 초기화 작업과 간편한 설정을 지원하도록 스프링 부트가 제공하는 TomcatServletWebServerFactory 를 사용하면 톰캣 웹 서버를 실행하는 코드를 만들
 수 있다.
 
-```
+```java
 ServletWebServerFactory serverFactory = new TomcatServletWebServerFactory(); 
 WebServer webServer = serverFactory.getWebServer();
 webServer.start();
@@ -54,7 +54,7 @@ public interface ServletContextInitializer {
 
 여러 요청을 처리하는데 반복적으로 등장하게 되는 공통 작업을 하나의 오브젝트에서 일괄적으로 처리하게 만드는 방식을 프론트 컨트롤러 패턴 이라고 한다.
 
-```
+```java
 WebServer webServer = serverFactory.getWebServer(servletContext -> {
     HelloController helloController = new HelloController();
     
