Update 6. 자동구성 기반 애플리케이션.md

--- a/toby-springboot/6. 자동구성 기반 애플리케이션.md
+++ b/toby-springboot/6. 자동구성 기반 애플리케이션.md
@@ -3,10 +3,8 @@
 ◼︎ 메타 애노테이션과 합성 애노테이션
 
 - Meta-annotation
--
 
 ```java
-
 @Target(ElementType.TYPE)
 @Retention(RetentionPolicy.RUNTIME)
 @Documented
@@ -23,7 +21,6 @@ public @interface Service {
 - Composed-annotation
 
 ```java
-
 @Target(ElementType.TYPE)
 @Retention(RetentionPolicy.RUNTIME)
 @Documented
@@ -55,22 +52,21 @@ public @interface RestController {
   개발자가 작성한 구성 정보에 의해서 생성되는게 아니라 컨테이너가 직접 만들고 사용하는 빈이기 때문에 어플리케이션 빈과 구분한다.   
   필요한 경우 일부 컨테이너 인프라 빈은 주입 받아서 활용할 수 있다.
 
-![빈 오브젝트 구분.png](img/img/빈%20오브젝트%20구분.png)
+![빈 오브젝트 구분.png](img/빈%20오브젝트%20구분.png)
 
 스프링 부트의 빈 구성정보는 컴포넌트 스캔에 의해서 등록되는 빈과 자동구성에 의해서 등록 되는 빈으로 구분된다.   
 일반적으로 어플리케이션 인프라 빈은 자동 구성에 의해 등록되지만 개발자가 작성한 코드 구성정보에서도 등록될 수 있다.
 
 ![사용자구성정보vs자동구성정보.png](img/사용자구성정보vs자동구성정보.png)
 
-◼︎ 인프라 빈 구성 정보의 분리
-@Import 를 이용하면 스캔 대상이 아닌 클래스를 빈으로 등록하도록 추가할 수 있다.
-보통 @Configuration 애노테이션이 붙은 클래스를 가져온다.   
-@Component가 붙은 클래스도 빈으로 등록시킬 수 있다.   
-애플리케이션 인프라스트럭쳐 빈 구성정보 클래스는 스프링 부트 자동 구성 메커니즘에 의해서 등록이 되도록 분리하는 작업이 필요하다.   
-분리된 클래스는 @Import 로 포함시킨다.
+◼︎ 인프라 빈 구성 정보의 분리   
+- @Import 를 이용하면 스캔 대상이 아닌 클래스를 빈으로 등록하도록 추가할 수 있다.   
+- 보통 @Configuration 애노테이션이 붙은 클래스를 가져온다.   
+- @Component가 붙은 클래스도 빈으로 등록시킬 수 있다.   
+- 애플리케이션 인프라스트럭쳐 빈 구성정보 클래스는 스프링 부트 자동 구성 메커니즘에 의해서 등록이 되도록 분리하는 작업이 필요하다.   
+- 분리된 클래스는 @Import 로 포함시킨다.   
 
 ```java
-
 @Retention(RetentionPolicy.RUNTIME)
 @Target(ElementType.TYPE)
 @Import({DispatcherServletConfig.class, TomcatWebServerConfig.class}) // Meta-annotation
@@ -151,14 +147,12 @@ public class MyAutoConfigImportSelector implements DeferredImportSelector {
 @Configuration(proxyBeanMethods = false)을 메타 애노테이션으로 가지는 @MyAutoConfiguration 애노테이션을 정의
 
 ```java
-
 @Retention(RetentionPolicy.RUNTIME)
 @Target(ElementType.TYPE)
 @Configuration(proxyBeanMethods = false)
 public @interface MyAutoConfiguration {
 
 }
-
 ```
 
 proxyBeanMethods 속성의 default는 true 이다. 이 경우 @Configuration이 붙은 클래스는 CGLib Proxy 기술을 이용해서 프록시 클래스로 확장
