Update 9. Spring JDBC 자동구성 개발.md

--- a/toby-springboot/9. Spring JDBC 자동구성 개발.md
+++ b/toby-springboot/9. Spring JDBC 자동구성 개발.md
@@ -4,7 +4,7 @@
 
 새로운 기술의 자동구성 클래스를 작성할 때에는 자동구성 클래스에 적용할 조건과 만들어지는 빈 오브젝트의 종류 등을 먼저 설계한다.
 
-![자동구성 클래스-설계.png](img/img/자동구성%20클래스-설계.png)
+![자동구성 클래스-설계.png](img/자동구성%20클래스-설계.png)
 
 두 개의 DataSource 구현 클래스를 조건에 따라 등록 되도록 한다.   
 이 두 개의 빈은 MyDataSourceProperties 라는 프로퍼티 클래스를 이용한다.
